epics: the transition's answer keeps the caller's order
EntityTransitionServiceTest.oneEventIsAnnouncedForTheWholeBatch failed in
about half of all runs, and the two entities came back in exactly the reverse
of the order the caller stated them.

Every step of the chain was already ordered on purpose: normalise copies into
a LinkedHashMap, apply builds `written` as a LinkedHashMap over stated.keySet(),
and announce reads written.values(). The order was thrown away on the last line
of apply, by `return Map.copyOf(written)`.

Map.copyOf answers a java.util.ImmutableCollections.MapN, whose iteration order
is a hash order perturbed by ImmutableCollections.SALT32L -- a salt seeded from
System.nanoTime() when that class initialises. It is therefore not some other
fixed order but a DIFFERENT order in every JVM, which is why one run was green
and the next red on identical code, and why the failure looked like test
pollution without being any. A standalone program over the two ids from the
failure gave the forward order seven times and the reverse five times in twelve
JVMs.

That broke the documented contract and not merely the test. transition() says
it answers "keyed by id in the order it was stated"; the order decides how
violations are reported and how two entries claiming one position resolve; the
announcement's TransitionAnnouncer.onEntitiesTransitioned promises the batch
"in the order the caller stated them" and that list becomes the EntityTransitioned
event payload; and the same map is the controller's JSON response body, whose
javadoc invites a caller to put its statement and the result side by side. All
four were salted.

Collections.unmodifiableMap keeps the immutability Map.copyOf was there for
while preserving the LinkedHashMap order. `written` is local to apply and
escapes only through the wrapper, so nothing can write behind a caller's back.

No assertion was touched. The rest of the module was audited for the same call
site: Archetypes' REGISTRY and EntityStat